# fanhuaji-tauri

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  biome.json  codecov.yml  index.html  package-lock.json  package.json  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
scripts/: sync-version.mjs
src/: main.ts  styles.css  theme.ts  updater.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  epub.rs  lib.rs  main.rs
src/__tests__/: i18n.test.ts  theme.test.ts  updater.test.ts  utils.test.ts
src/i18n/: i18n.ts
src/i18n/locales/: en.json  zh-CN.json  zh-TW.json
