[package]
name = "fanhuaji-tauri"
version = "1.0.0"
edition = "2021"

[lib]
name = "fanhuaji_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "fanhuaji-tauri"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
