[package]
name = "fanhuaji-tauri"
version = "2.0.3"
edition = "2024"

[lib]
name = "fanhuaji_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "fanhuaji-tauri"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time"] }
zip = "2"
quick-xml = "0.36"
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
